# DeepScatter

./: AUTHORS.rst  CONTRIBUTING.rst  Deepscatter.ipynb  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
deepscatter/: __init__.py  data_manager.py  model.py  plot.py
docs/: conf.py  modules.rst
docs/_build/doctrees/: CONTRIBUTING.doctree  deepscatter.data.doctree  deepscatter.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  CONTRIBUTING.html  deepscatter.data.html  deepscatter.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/deepscatter/: data_manager.html  model.html  plot.html
docs/_build/html/_sources/: deepscatter.data.rst.txt  deepscatter.rst.txt  index.rst.txt
notebooks/: DeepScatter_f.ipynb  Deepscatter.ipynb  Demo.ipynb
